# double-ratchet-chat

./: .gitignore  Cargo.toml  README.md
src/: doubleratchet.rs  lib.rs  main.rs  varint.rs
tests/: tests.rs
